force-app/main/default/objects/Booking__c/fields/Sales_Head_Approver_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_Approver_Status__c</fullName>
    <label>Sales Head Approver Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending For Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>