force-app/main/default/objects/Booking__c/fields/Sales_Head_Booking_From_B__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_Booking_From_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Head Booking From B</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings4ebu</relationshipName>
    <type>Lookup</type>
</CustomField>