force-app/main/default/objects/Booking__c/fields/Sanctioned_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sanctioned_Loan_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>It is used in case of mode funding amount is home loan</inlineHelpText>
    <label>Sanctioned Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>