force-app/main/default/objects/Booking__c/fields/SDR_Tax__c.field-meta.xml
<CustomField>
    <fullName>SDR_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SDR Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>