force-app/main/default/objects/Booking__c/fields/SDR_Value__c.field-meta.xml
<CustomField>
    <fullName>SDR_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SDR Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>