force-app/main/default/objects/Booking__c/fields/Send_Approval_To_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Send_Approval_To_Sales_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It is use In Case of Change AV</inlineHelpText>
    <label>Send Approval To Sales Head</label>
    <type>Checkbox</type>
</CustomField>