force-app/main/default/objects/Booking__c/fields/Sent_Approval_to_CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>Sent_Approval_to_CRM_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It is used in case to modify AV</inlineHelpText>
    <label>Sent Approval to CRM Head</label>
    <type>Checkbox</type>
</CustomField>