force-app/main/default/objects/Booking__c/fields/Session_Status__c.field-meta.xml
<CustomField>
    <fullName>Session_Status__c</fullName>
    <formula>IF( OR( ISBLANK(Conversation_Start_Date_Time__c), ISBLANK(Conversation_End_Date_Time__c) ), &apos;Inactive&apos;, IF(NOW() &gt; Conversation_End_Date_Time__c, &apos;Inactive&apos;, &apos;Active&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Status</label>
    <type>Text</type>
</CustomField>