force-app/main/default/objects/Booking__c/fields/Show_Chat_Panel__c.field-meta.xml
<CustomField>
    <fullName>Show_Chat_Panel__c</fullName>
    <formula>$Setup.WA_API_Details_Gupshup__c.Project_Name__c  =  Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Chat Panel</label>
    <type>Checkbox</type>
</CustomField>