force-app/main/default/objects/Booking__c/fields/Signed_Booking_Form_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Signed_Booking_Form_Approval_Status__c</fullName>
    <label>Signed Booking Form Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending From Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>