force-app/main/default/objects/Booking__c/fields/Signed_Booking_Form_Approver__c.field-meta.xml
<CustomField>
    <fullName>Signed_Booking_Form_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed Booking Form Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>