force-app/main/default/objects/Booking__c/fields/Signed_Booking_Form_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Booking_Form_Date__c</fullName>
    <label>Signed Booking Form Date</label>
    <type>DateTime</type>
</CustomField>