force-app/main/default/objects/Booking__c/fields/Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty__c</fullName>
    <defaultValue>6</defaultValue>
    <label>Stamp Duty(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>