force-app/main/default/objects/Booking__c/fields/Stamp_Duty_Tax__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Stamp Duty Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>