force-app/main/default/objects/Booking__c/fields/Total_Agreement_Value_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Agreement_Value_Paid__c</fullName>
    <label>Total Agreement Value Paid</label>
    <summarizedField>Demand__c.Agreement_Value_Paid__c</summarizedField>
    <summaryForeignKey>Demand__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>