force-app/main/default/objects/Booking__c/fields/Total_agreement_Value_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_agreement_Value_Remaining__c</fullName>
    <formula>Total_Agreement_Value_Demanded__c - Total_Agreement_Value_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total agreement Value Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>