force-app/main/default/objects/Booking__c/fields/Total_Agreement_Value_Tax_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Agreement_Value_Tax_Balance__c</fullName>
    <formula>Total_Agreement_Value_Tax_Demanded__c - Total_Agreement_Value_Tax_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Agreement Value Tax Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>