force-app/main/default/objects/Booking__c/fields/Total_Amount_Demanded__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Demanded__c</fullName>
    <label>Total Amount Demanded</label>
    <summarizedField>Demand__c.Total_Amount_Demanded__c</summarizedField>
    <summaryForeignKey>Demand__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>