force-app/main/default/objects/Booking__c/fields/Total_AV_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Total_AV_Receipts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total AV Receipts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>