force-app/main/default/objects/Booking__c/fields/Total_Demand__c.field-meta.xml
<CustomField>
    <fullName>Total_Demand__c</fullName>
    <label>Total Demand</label>
    <summaryForeignKey>Demand__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>