force-app/main/default/objects/Booking__c/fields/Total_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Amount__c</fullName>
    <label>Total Interest Amount</label>
    <summarizedField>Demand__c.Total_Interest_Amount__c</summarizedField>
    <summaryForeignKey>Demand__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>