force-app/main/default/objects/Booking__c/fields/Total_Other_Charges_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Charges_Paid__c</fullName>
    <label>Total Other Charges Paid</label>
    <summarizedField>Demand__c.Other_Charges_Paid__c</summarizedField>
    <summaryForeignKey>Demand__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>