force-app/main/default/objects/Booking__c/fields/Total_Other_Charges_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Charges_Remaining__c</fullName>
    <formula>Total_Other_Charges_Demanded__c - Total_Other_Charges_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Charges Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>