force-app/main/default/objects/Booking__c/fields/Total_Statutory_Charges_Remaining_Percen__c.field-meta.xml
<CustomField>
    <fullName>Total_Statutory_Charges_Remaining_Percen__c</fullName>
    <formula>Total_Statutory_Charges_Remaining__c / Total_Statutory_Charges_Demanded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Statutory Charges Remaining %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>