force-app/main/default/objects/Booking__c/fields/Total_Statutory_Charges_Tax_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Statutory_Charges_Tax_Paid__c</fullName>
    <label>Total Statutory Charges Tax Paid</label>
    <summarizedField>Demand__c.Statutory_Charges_Tax_Paid__c</summarizedField>
    <summaryForeignKey>Demand__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>