force-app/main/default/objects/Booking__c/fields/Total_Statutory_Charges_Tax_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Statutory_Charges_Tax_Remaining__c</fullName>
    <formula>Total_Statutory_Charges_Tax_Demanded__c - Total_Statutory_Charges_Tax_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Statutory Charges Tax Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>