force-app/main/default/objects/Booking__c/fields/Total_Tax_On_Interest_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_On_Interest_Amount_Paid__c</fullName>
    <label>Total Tax On Interest Amount Paid</label>
    <summarizedField>Demand__c.Total_Tax_On_Interest_Amount_Paid__c</summarizedField>
    <summaryForeignKey>Demand__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>