force-app/main/default/objects/Booking__c/fields/Type_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Booking__c</fullName>
    <label>Type of Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subvention</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>