force-app/main/default/objects/Booking__c/fields/Updated_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Updated_Agreement_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Updated Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>