force-app/main/default/objects/Booking__c/fields/Welcome_call_comments__c.field-meta.xml
<CustomField>
    <fullName>Welcome_call_comments__c</fullName>
    <label>Welcome call comments</label>
    <type>TextArea</type>
</CustomField>