force-app/main/default/objects/Booking__c/fields/Welcome_Call_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Completion_Date__c</fullName>
    <label>Welcome Call Completion Date</label>
    <type>DateTime</type>
</CustomField>