force-app/main/default/objects/Booking__c/fields/Welcome_Call_Done_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Done_DateTime__c</fullName>
    <label>Welcome Call Done DateTime</label>
    <type>DateTime</type>
</CustomField>