force-app/main/default/objects/Booking__c/fields/Welcome_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Status__c</fullName>
    <label>Welcome Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Call Completed</fullName>
            </value>
            <value>
                <fullName>Welcome call pending</fullName>
            </value>
            <value>
                <fullName>Welcome call rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>