force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_Stage__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Project__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Agreement_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>