force-app/main/default/objects/Booking__c/listViews/My_Bookings_CP.listView-meta.xml
<ListView>
    <fullName>My_Bookings_CP</fullName>
    <columns>NAME</columns>
    <columns>Booking_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Unit__c</columns>
    <columns>Project__c</columns>
    <columns>Booking_Stage__c</columns>
    <columns>Booking_Registered__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Bookings</label>
</ListView>